<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.vpipl.citybazaar.Register_Activity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@color/color_51be7b"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:singleLine="true"
                android:text="Change Password"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="Deprecated,HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/white"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/password_type"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_password_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_edittext_bottom_line"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:minHeight="45dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp"></TextView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom"
                    android:minHeight="52dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext_bottom_line"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:singleLine="true"
                        android:textSize="14sp"
                        tools:ignore="Deprecated" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom"
                    android:minHeight="52dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext_bottom_line"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:singleLine="true"
                        android:textSize="14sp"
                        tools:ignore="Deprecated" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom"
                    android:minHeight="52dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext_bottom_line"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:singleLine="true"
                        android:textSize="14sp"
                        tools:ignore="Deprecated" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_rectangle_button_new"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/update_changes"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>