<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@color/color_51be7b"
android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:singleLine="true"
        android:text="Id Card"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_download"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_round_button_orange"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Take Screeshot"
                        android:textColor="@color/app_color_white"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_business_card_rectangle"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/business_card_back"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:padding="2dp"
                            android:src="@drawable/logo" />

                        <TextView
                            android:id="@+id/tv_mem_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text=""
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/tv_idno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text=""
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16dp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_rank_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text=""
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="7"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_mem_mobileno"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dp"
                                    android:text="Mobile no" />

                                <TextView
                                    android:id="@+id/tv_mem_emailid"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="2dp"
                                    android:text="email id "
                                    android:textSize="12dp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="2dp"
                                    android:text="https://www.Rootsberry.com"
                                    android:textSize="12dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:gravity="right|bottom"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:orientation="vertical"
                                    android:padding="1dp">

                                    <ImageView
                                        android:id="@+id/iv_bc_img"
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:padding="5dp"
                                        android:scaleType="fitXY"
                                        android:src="@drawable/ic_user_black" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_business_card_rectangle"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/business_card_back"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/card_strng" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/card_company_name"
                            android:textColor="@color/app_color_black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/card_contact_detail" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="info@Rootsberry.com"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>